--- a/index.html
+++ b/index.html
@@ -1,37 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Cadastro</title>
+  <meta charset="UTF-8">
+  <title>Exercício HTML</title>
 </head>
 <body>
 
-    <h1>Formulário de Cadastro</h1>
+  <h1>Formulário de Cadastro</h1>
 
-    <form>
-        <div>
-            <label for="nome">Nome:</label><br>
-            <input type="text" id="nome" name="nome">
-        </div>
+  <form>
+    <label for="nome">Nome</label><br>
+    <input type="text" id="nome" name="nome" required><br><br>
 
-        <br>
+    <label for="email">Email</label><br>
+    <input type="email" id="email" name="email" required><br><br>
 
-        <div>
-            <label for="email">E-mail:</label><br>
-            <input type="email" id="email" name="email">
-        </div>
+    <label for="senha">Senha</label><br>
+    <input type="password" id="senha" name="senha" required><br><br>
 
-        <br>
-
-        <div>
-            <label for="senha">Senha:</label><br>
-            <input type="password" id="senha" name="senha">
-        </div>
-
-        <br>
-
-        <button type="submit">Cadastrar</button>
-    </form>
+    <button type="submit">Cadastrar</button>
+  </form>
 
 </body>
 </html>
